--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>How to Make an Online Calculator with HTML and PHP | HungryPiranha.org</title>
+<meta name="Description" content="Here are simple instructions and free code you can use to make an online calculator for your website." />
+
+<link href="/style.css" rel="stylesheet" type="text/css" />
+<link rel="shortcut icon" href="/favicon.png" />
+</head>
+
+
 <?php
 if (isset($_POST['valuea'])) $valuea = $_POST['valuea'];
 if (isset($_POST['valueb'])) $valueb = $_POST['valueb'];
